--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
-    font-family: "Essonnes";
+    font-family: essonnes-display, serif;
     color: white;
 }
 html, body {
