Fix grid orientation

--- a/src/styles/grid.module.css
+++ b/src/styles/grid.module.css
@@ -1,5 +1,6 @@
 .row {
-    display: inline-block;
+    display: grid;
+    grid-template-columns: repeat(16,1fr);
 }
 .cellGrid {
     height: 50px;
