--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,3 +48,10 @@ footer p{
     color: #bbb;
     margin: 40px auto;
 }
+
+canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: contain;
+}
