--- a/src/styles/grid.module.css
+++ b/src/styles/grid.module.css
@@ -7,6 +7,15 @@
     aspect-ratio: 1/1;
 }
 
+.coordinatesBtn {
+    display: inline-block;
+    background: #32d429;
+    padding: 10px 16px;
+    border-radius: 10px;
+    margin-top: 20px;
+    font-weight: 500;
+}
+
 .columnBtn, .rowBtn{
     display: inline-block;
     background: #D42990;
