--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,19 +1,22 @@
 @import url("https://use.typekit.net/paj1wnf.css");
 
-*{
+* {
     margin: 0;
     padding: 0;
     text-decoration: none;
     font-family: essonnes-display, serif;
     color: white;
 }
+
 html, body {
     min-height: 100%;
 }
-body{
-    background: radial-gradient(at top left, rgba(146,43,225,1)0%, rgba(43,9,197,1) 100%);
+
+body {
+    background: radial-gradient(at top left, rgba(146, 43, 225, 1) 0%, rgba(43, 9, 197, 1) 100%);
     background-repeat: no-repeat;
 }
+
 p {
     margin: 16px auto;
     line-height: 1.5em;
@@ -24,15 +27,18 @@ p {
     max-width: 1200px;
     margin: 0 auto;
 }
+
 nav {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 40px auto;
 }
+
 nav .links {
     display: inline-block;
     text-align: right;
 }
+
 nav a {
     display: inline-block;
     margin-left: 20px;
@@ -40,18 +46,70 @@ nav a {
     padding-bottom: 8px;
     border-bottom: 3px solid transparent;
 }
+
 nav a:hover {
     border-color: white;
 }
-footer p{
+
+footer p {
     text-align: center;
     color: #bbb;
     margin: 40px auto;
 }
 
 canvas {
-  width: 100%;
-  aspect-ratio: 1/1;
-  display: block;
-  object-fit: contain;
+    width: 100%;
+    aspect-ratio: 1/1;
+    display: block;
+    object-fit: contain;
+}
+
+.form--centered {
+    max-width: 300px;
+    margin: 0 auto;
+    padding: 0 1rem;
+}
+
+form {
+    margin-bottom: 2.5rem;
+}
+
+label {
+    display: block;
+    font-weight: 300;
+    margin-bottom: .25rem;
+}
+
+input, textarea {
+    display: block;
+    width: 100%;
+    /*color: #332a40;*/
+    border-radius: .5rem;
+    border: 1px solid #8c789b;
+    padding: .5rem;
+    margin-bottom: 1rem;
+    /*font-family: 'Work Sans', sans-serif;*/
+    font-size: .8rem;
+}
+
+input[type="text"]:disabled {
+    background: #dddddd;
+}
+
+textarea {
+    min-height: 300px;
+}
+
+.btn {
+    background: #D42990;
+    font-size: 1rem;
+    padding: .75rem 1.5rem;
+    border: 0;
+    margin: 0 0 .5rem 0;
+    display: block;
+    width: 80px;
+    text-align: center;
+    border-radius: .5rem;
+    font-weight: bold;
+    transition: background 0.2s;
 }
