--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -102,7 +102,7 @@ textarea {
     min-height: 300px;
 }
 
-input[type="text"] {
+input[type="text"], input[type="password"] {
     color: black;
 }
 
