--- a/src/styles/ui-layout.css
+++ b/src/styles/ui-layout.css
@@ -1,7 +1,8 @@
 .ui-layout {
     display: grid;
-    grid-gap: 1em;
-    grid-template-columns: 60% 10% 30%;
+    grid-gap: .5em;
+    max-height: 80vh;
+    grid-template-columns: 60% 5% 35%;
     grid-template-rows: 10% 40% 40% 10%;
     grid-template-areas:
       "play      ....... ......."
