--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -63,13 +63,7 @@ footer p {
 
 canvas {
     display: flex;
-    /*width: 100%;*/
-    object-position: left;
-    height: 100%;
-    aspect-ratio: 1/1;
-    margin: 0 auto 0 0;
-    /*!*display: block;*!*/
-    /*object-fit: contain;*/
+    object-fit: contain;
     background: cyan;
 }
 
