--- a/src/styles/grid.module.css
+++ b/src/styles/grid.module.css
@@ -1,10 +1,23 @@
 .golWrapper {
     grid-area: gol;
     display: flex;
-    /*align-content: flex-start;*/
+    object-fit: contain;
+    max-height: 100%;
+    max-width: 100%;
+    aspect-ratio: 1/1;
+    margin: 0 auto;
     background: cornsilk;
 }
 
+/*.canvasWrapper {*/
+/*    display: inline-block;*/
+/*    object-fit: contain;*/
+/*    height: auto;*/
+/*    width: 100%;*/
+/*    !*width: 500px;*!*/
+/*    background: #d4296d;*/
+
+/*}*/
 
 /*.gridDiv {*/
 /*    float: left;*/
@@ -20,7 +33,7 @@
     background: #32d429;
     padding: 10px 16px;
     border-radius: 10px;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     font-weight: 500;
 }
 
