--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,12 +26,45 @@ p {
 .layout {
     max-width: 1200px;
     margin: 0 auto;
+    display: grid;
+    /*gap: 20px;*/
+    grid-gap: .5em;
+    grid-row-gap: .5em;
+    row-gap: .5em;
+
+
+
+    /*align-content: space-evenly;*/
+    /*justify-content: space-evenly;*/
+
+    /*height: 100vh;*/
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    /*object-fit: contain;*/
+    /*grid-template-columns: 52% 8% auto;*/
+    /*grid-template-rows: 8% 44% 44% 10%;*/
+    grid-template-areas:
+      "header"
+      "content"
+      "footer"
+}
+
+.content {
+    grid-area: content;
+    /*min-height: 100%;*/
+    object-fit: contain;
+    height: auto;
+    /*padding-bottom: 2.5rem;*/
+    /*height: auto;*/
+    /*padding: 15px 5px 10px 5px;*/
 }
 
 nav {
+    grid-area: header;
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 40px auto;
+    padding-bottom: 8px;
 }
 
 nav .links {
@@ -41,6 +74,10 @@ nav .links {
 
 nav .hellouser {
     display: inline-block;
+}
+
+nav h1 {
+    justify-items: left;
 }
 
 nav a {
@@ -55,6 +92,11 @@ nav a:hover {
     border-color: white;
 }
 
+footer {
+        grid-area: footer;
+    padding-top: 5px;
+}
+
 footer p {
     text-align: center;
     color: #bbb;
@@ -65,6 +107,8 @@ canvas {
     display: flex;
     object-fit: contain;
     background: cyan;
+    height: auto;
+    /*width: 100%;*/
 }
 
 .form--centered {
@@ -101,7 +145,7 @@ textarea {
     min-height: 300px;
 }
 
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="number"] {
     color: black;
 }
 
