--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -2,51 +2,36 @@
   background: cornflowerblue;
 }
 .bottom-grid-controller {
+
   grid-area: bottombtn;
   display: flex;
-  /*align-self: center;*/
-  /*align-items: center;*/
-  /*justify-content: center;*/
-  max-width: 100%;
-  max-height: 100%;
-
   font-family: "CaskaydiaCove Nerd Font", serif;
   margin: 0 0 .5rem 0;
   font-size: 1rem;
-  padding: .75rem 1.5rem;
+  /*padding: .75rem 1.5rem;*/
   border: 0;
-  /*max-height: 20vh;*/
-  /*max-width: 20vh;*/
-  /*height: 5rem;*/
-  /*width: 25rem;*/
   text-align: center;
-  /*font-weight: bold;*/
   transition: background 0.2s;
   background: #d52828;
+  width: 100%;
 }
 
 .side-grid-controller {
-    background: #d52828;
+  background: #d52828;
   grid-area: sidebtn;
   display: grid;
   font-family: "CaskaydiaCove Nerd Font", serif;
-  /*margin: 0 0 .5rem 0;*/
   font-size: 1rem;
-  /*padding: .75rem 1.5rem;*/
   border: 0;
-  width: auto;
-  height: auto;
-  /*max-height: 300px;*/
-  /*max-width: 100%;*/
   text-align: center;
   overflow-wrap: break-word;
   white-space: normal;
-  /*font-weight: bold;*/
   transition: background 0.2s;
 }
 
 .btn {
   background: #5d705b;
+  width: auto;
 }
 
 label, input {
@@ -57,6 +42,7 @@ label, input {
 
 input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button {
+  width: auto;
   opacity: 1;
 }
 
@@ -68,53 +54,44 @@ input[type='number']::-webkit-outer-spin-button {
 /*  background: #37d429;*/
 /*}*/
 
-/*.col-affected-quantity {*/
-/*  overflow-wrap: break-word;*/
-/*  white-space: normal;*/
-/*  max-width: 20vh;*/
-/*  background: #37d429;*/
-/*}*/
+.col-affected-quantity {
+  /*overflow-wrap: break-word;*/
+  /*white-space: normal;*/
+  font-size: .7em;
+  width: auto;
+  /*max-width: 20vh;*/
+  background: #ff4f1e;
+}
 
 .btn.insert-first__col {
   background: #37d429;
-  /*max-width: 20vh;*/
   border-radius: 2rem 0 0 2rem;
 }
 
 .btn.delete-first__col {
-  /*max-width: 20vh;*/
   background: #d4296d;
-  /*border-radius: 0 .5rem .5rem 0;*/
 }
 
 .btn.insert-last__col {
   background: #d4296d;
-  /*max-width: 20vh;*/
-  /*border-radius: .5rem 0 0 .5rem;*/
 }
 
 .btn.delete-last__col {
   background: #37d429;
   border-radius: 0 2rem 2rem 0;
-  /*max-width: 20vh;*/
 }
 
 .btn.insert-first__col {
-  /*max-width: 20vh;*/
   background: #37d429;
   border-radius: 2rem 0 0 2rem;
 }
 
 .btn.delete-first__col {
-  /*max-width: 20vh;*/
   background: #d4296d;
-  /*border-radius: 0 .5rem .5rem 0;*/
 }
 
 .btn.insert-last__col {
-  /*max-width: 20vh;*/
   background: #d4296d;
-  /*border-radius: .5rem 0 0 .5rem;*/
 }
 
 .btn.delete-last__col {
@@ -126,26 +103,20 @@ input[type='number']::-webkit-outer-spin-button {
 
 .btn.insert-first__row {
   background: #37d429;
-  /*max-height: 20vh;*/
-  /*min-height: 20vh;*/
   border-radius: 2rem 2rem 0 0;
 }
 
 .btn.delete-first__row {
   background: #d4296d;
-  /*max-height: 20vh;*/
-  /*min-height: 20vh;*/
-  /*border-radius: 0 .5rem .5rem 0;*/
+  border-radius: 0 .5rem .5rem 0;
 }
 
 .btn.insert-last__row {
   background: #d4296d;
-  /*max-height: 20vh;*/
-  /*border-radius: .5rem 0 0 .5rem;*/
+  border-radius: .5rem 0 0 .5rem;
 }
 
 .btn.delete-last__row {
   background: #37d429;
-  /*max-height: 20vh;*/
   border-radius: 0 0 2rem 2rem;
 }
