--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -2,18 +2,17 @@
   background: cornflowerblue;
 }
 .bottom-grid-controller {
-
   grid-area: bottombtn;
   display: flex;
   font-family: "CaskaydiaCove Nerd Font", serif;
-  margin: 0 0 .5rem 0;
+  /*margin: 0 0 .5rem 0;*/
   font-size: 1rem;
   /*padding: .75rem 1.5rem;*/
-  border: 0;
+  /*border: 0;*/
   text-align: center;
-  transition: background 0.2s;
+  /*transition: background 0.2s;*/
   background: #d52828;
-  width: 100%;
+  /*width: 100%;*/
 }
 
 .side-grid-controller {
@@ -29,9 +28,10 @@
   transition: background 0.2s;
 }
 
-.btn {
+.control-button {
   background: #5d705b;
-  width: auto;
+  width: 100%;
+  /*height: auto;*/
 }
 
 label, input {
@@ -54,69 +54,74 @@ input[type='number']::-webkit-outer-spin-button {
 /*  background: #37d429;*/
 /*}*/
 
+.column-form {
+  margin-bottom: 0;
+}
+
 .col-affected-quantity {
-  /*overflow-wrap: break-word;*/
-  /*white-space: normal;*/
+  display: flex;
+  overflow-wrap: break-word;
+  white-space: normal;
   font-size: .7em;
-  width: auto;
+  padding: 1em 2em 0 1em;
   /*max-width: 20vh;*/
   background: #ff4f1e;
 }
 
-.btn.insert-first__col {
+.control-button.insert-first__col {
   background: #37d429;
   border-radius: 2rem 0 0 2rem;
 }
 
-.btn.delete-first__col {
+.control-button.delete-first__col {
   background: #d4296d;
 }
 
-.btn.insert-last__col {
+.control-button.insert-last__col {
   background: #d4296d;
 }
 
-.btn.delete-last__col {
+.control-button.delete-last__col {
   background: #37d429;
   border-radius: 0 2rem 2rem 0;
 }
 
-.btn.insert-first__col {
+.control-button.insert-first__col {
   background: #37d429;
   border-radius: 2rem 0 0 2rem;
 }
 
-.btn.delete-first__col {
+.control-button.delete-first__col {
   background: #d4296d;
 }
 
-.btn.insert-last__col {
+.control-button.insert-last__col {
   background: #d4296d;
 }
 
-.btn.delete-last__col {
+.control-button.delete-last__col {
   /*max-width: 20vh;*/
   background: #37d429;
   border-radius: 0 2rem 2rem 0;
 }
 
 
-.btn.insert-first__row {
+.control-button.insert-first__row {
   background: #37d429;
   border-radius: 2rem 2rem 0 0;
 }
 
-.btn.delete-first__row {
+.control-button.delete-first__row {
   background: #d4296d;
   border-radius: 0 .5rem .5rem 0;
 }
 
-.btn.insert-last__row {
+.control-button.insert-last__row {
   background: #d4296d;
   border-radius: .5rem 0 0 .5rem;
 }
 
-.btn.delete-last__row {
+.control-button.delete-last__row {
   background: #37d429;
   border-radius: 0 0 2rem 2rem;
 }
