--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -1,5 +1,4 @@
-
-label, input {
+label , input {
     /* align-content: center;*/
     /*justify-content: center;*/
     /* text-align: center;*/
@@ -30,11 +29,11 @@ input[type='number']::-webkit-outer-spin-button {
     font-size: 1rem;
     text-align: center;
     /*transition: background 0.2s;*/
-    background: #d52828;
+    /*background: #d52828;*/
 }
 
 .side-grid-controller {
-    background: #d52828;
+    /*background: #d52828;*/
     grid-area: sidebtn;
     display: flex;
     flex-direction: column;
@@ -45,15 +44,14 @@ input[type='number']::-webkit-outer-spin-button {
     transition: background 0.2s;
 }
 
-
-.column-form {
-    margin-bottom: 0;
-}
-
 .control-button {
     background: #D42990;
     width: 100%;
     height: 100%;
+}
+
+.column-form {
+    margin-bottom: 0;
 }
 
 .row-form {
@@ -63,14 +61,14 @@ input[type='number']::-webkit-outer-spin-button {
 .row-affected-quantity {
     padding: 0 1em 0;
     font-size: .7em;
-    background: #ff4f1e;
+    /*background: #ff4f1e;*/
 }
 
 .col-affected-quantity {
     display: grid;
     font-size: .7em;
     padding: 0 1em 0;
-    background: #ff4f1e;
+    /*background: #ff4f1e;*/
 }
 
 .control-button.insert-first__col {
@@ -79,7 +77,6 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .control-button.insert-last__col {
-    /*max-width: 20vh;*/
     background: #37d429;
     border-radius: 0 2rem 2rem 0;
 }
@@ -92,5 +89,4 @@ input[type='number']::-webkit-outer-spin-button {
 .control-button.insert-last__row {
     background: #37d429;
     border-radius: 0 0 2rem 2rem;
-    /*border-radius: .5rem 0 0 .5rem;*/
 }
