--- a/src/styles/play.css
+++ b/src/styles/play.css
@@ -27,6 +27,12 @@
 /*    padding-bottom: .2em;*/
 /*}*/
 
+.play-button {
+    background: #D42990;
+    width: 100%;
+    height: 100%;
+}
+
 select, option {
     border-radius: .5rem;
     color: black;
