Add list and button to load selected pattern (list of patterns fetched from api).

--- a/src/styles/pattern.css
+++ b/src/styles/pattern.css
@@ -2,3 +2,9 @@
     grid-area: pattern;
     background: #7387c4;
 }
+
+.pattern-select {
+    display: flex;
+    height: 50%;
+    width: 100%;
+}
