Add style to fresh grid container.

--- a/src/styles/pattern.css
+++ b/src/styles/pattern.css
@@ -1,3 +1,18 @@
+.fresh-grid-form {
+    margin-bottom: 0;
+}
+
+.fresh-grid-container {
+    display: flex;
+}
+
+.fresh-grid-size {
+    display: grid;
+    font-size: .7em;
+    padding: 0 1em 0;
+    /*background: #ff4f1e;*/
+}
+
 .pattern-container {
     grid-area: pattern;
     background: #7387c4;
