--- a/src/styles/ui-layout.css
+++ b/src/styles/ui-layout.css
@@ -4,9 +4,9 @@
     /*min-height: 80vh;*/
     /*height: 80vh;*/
     /*height: auto;*/
-    grid-template-columns: auto 5% 45%;
+    grid-template-columns: 50vw 3vw 37vw;
     /*grid-template-rows: 10% auto auto 10%;*/
-    object-fit: contain;
+    /*object-fit: contain;*/
     /*grid-template-columns: 52% 8% auto;*/
     /*grid-template-rows: 8% 44% 44% 10%;*/
     grid-template-areas:
@@ -14,5 +14,18 @@
       "gol       sidebtn pattern"
       "gol       sidebtn replay"
       "bottombtn ....... .......";
+}
+
+@media (max-aspect-ratio: 2/1) {
+    .ui-layout {
+        grid-template-columns: 80vw minmax(3em, 3vw);
+        grid-template-areas:
+      "play      ......."
+      "gol       sidebtn"
+      "gol       sidebtn"
+      "bottombtn ......."
+      "pattern pattern"
+      "replay replay";
+    }
 }
 
