--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -10,10 +10,14 @@ label, input {
     justify-items: center;
     justify-content: center;
     margin-bottom: 0;
-    margin-left: .5em;
-    margin-right: .5em;
-    padding-top: .2em;
-    padding-bottom: .2em;
+    /*margin-left: .5em;*/
+    /*margin-right: .5em;*/
+    /*padding-top: .2em;*/
+    /*padding-bottom: .2em;*/
+    margin-left: 2vw;
+    margin-right: 2vw;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
 }
 
 input[type='number']::-webkit-inner-spin-button,
@@ -27,14 +31,14 @@ input[type='number']::-webkit-outer-spin-button {
     display: grid;
     grid-template-columns: 15vw 15vw 15vw 15vw 15vw;
     font-family: "CaskaydiaCove Nerd Font", serif;
-    font-size: 1rem;
+    font-size: 4vw;
     text-align: center;
     height: 10vw;
     /*transition: background 0.2s;*/
     /*background: #d52828;*/
 }
 
-@media (min-aspect-ratio: 2/1) {
+@media (min-aspect-ratio: 9/7) {
     .bottom-grid-controller {
         grid-template-columns: 11vw 11vw 6vw 11vw 11vw;
     }
@@ -46,14 +50,14 @@ input[type='number']::-webkit-outer-spin-button {
     display: flex;
     flex-direction: column;
     font-family: "CaskaydiaCove Nerd Font", serif;
-    font-size: 1rem;
+    font-size: 3vw;
     border: 0;
     text-align: center;
     transition: background 0.2s;
     width: 10vw;
 }
 
-@media (min-aspect-ratio: 2/1) {
+@media (min-aspect-ratio: 9/7) {
     .side-grid-controller {
         width: 5vw;
     }
@@ -84,7 +88,7 @@ input[type='number']::-webkit-outer-spin-button {
     /*align-self: center;*/
     /*justify-self: center;*/
     /*padding: 0 1em 0;*/
-    font-size: .7em;
+    font-size: 2vw;
     /*background: #ff4f1e;*/
 }
 
@@ -96,7 +100,7 @@ input[type='number']::-webkit-outer-spin-button {
     /*display: grid;*/
     /*align-self: center;*/
     /*justify-self: center;*/
-    font-size: .7em;
+    font-size: 2vw;
     /*padding: 0 1em 0;*/
     /*background: #ff4f1e;*/
 }
@@ -110,7 +114,7 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 
-@media (min-aspect-ratio: 2/1) {
+@media (min-aspect-ratio: 9/7) {
     .col-affected-quantity input,
     .row-affected-quantity input {
         width: 5vw;
