--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@ body {
       "footer"
 }
 
-@media (min-aspect-ratio: 2/1) {
+@media (min-aspect-ratio: 9/7) {
     .layout {
         padding-left: 3vw;
         padding-right: 3vw;
@@ -77,7 +77,7 @@ nav {
     grid-template-areas: "username login-or-out"
 }
 
-@media (min-aspect-ratio: 2/1) {
+@media (min-aspect-ratio: 9/7) {
     .links {
         font-size: 1.7vw;
     }
@@ -90,7 +90,7 @@ nav {
     align-self: center;
 }
 
-@media (min-aspect-ratio: 2/1){
+@media (min-aspect-ratio: 9/7){
     .logo{
         font-size: 1.5vw;
     }
@@ -131,20 +131,19 @@ canvas {
     object-fit: contain;
 }
 
-@media (max-aspect-ratio: 2/1) {
+@media (max-aspect-ratio: 9/7) {
     canvas {
         width: 75vw;
     }
 }
 
 .form--centered {
-    max-width: 300px;
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: 0 1vw;
 }
 
 form {
-    margin-bottom: 2.5rem;
+    margin-bottom: 1vw;
 }
 
 label {
@@ -157,11 +156,11 @@ input, textarea {
     color: white;
     display: block;
     width: 100%;
-    border-radius: .5rem;
+    border-radius: 1vw;
     border: 1px solid #8c789b;
-    padding: .5rem;
-    margin-bottom: 1rem;
-    font-size: .8rem;
+    padding: 1vw;
+    margin-bottom: 1vw;
+    font-size: 3vw;
 }
 
 textarea {
@@ -178,7 +177,7 @@ input[type="text"]:disabled {
 
 .btn {
     background: #D42990;
-    font-size: 1rem;
+    font-size: 2vw;
     padding: .75rem 1.5rem;
     border: 0;
     margin: 0 0 .5rem 0;
@@ -188,4 +187,10 @@ input[type="text"]:disabled {
     border-radius: .5rem;
     font-weight: bold;
     transition: background 0.2s;
+}
+
+@media (min-aspect-ratio: 9/7){
+    .btn{
+
+    }
 }
