--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,7 +1,7 @@
 .header {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 40px;
+    grid-gap: 4vw;
     align-items: center;
 }
 .header h2 {
@@ -11,12 +11,4 @@
     font-size: 3em;
     font-weight: 300;
     margin-bottom: 20px;
-}
-.btn {
-    display: inline-block;
-    background: #D42990;
-    padding: 10px 16px;
-    border-radius: 10px;
-    margin-top: 20px;
-    font-weight: 500;
 }
