--- a/src/styles/play.css
+++ b/src/styles/play.css
@@ -1,24 +1,32 @@
 .play-container {
     grid-area: play;
     display: grid;
-    grid-template-columns: 15vw 15vw 15vw 15vw 15vw;
+    grid-template-columns: 16vw 16vw 11vw 16vw 16vw;
     background: #8ad429;
+    font-size: 2.8vw;
 }
 
-@media (min-aspect-ratio: 2/1) {
+@media (min-aspect-ratio: 9/7) {
     .play-container {
         grid-template-columns: 11vw 11vw 6vw 11vw 11vw;
+        font-size: 2vw;
     }
 }
 
 .interval-form {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 5em;
+    display: flex;
+    justify-content: center;
     margin-bottom: 0;
-    padding: 0 1em 0;
-    font-size: .7em;
+    /*padding: 0 1em 0;*/
+    font-size: 2vw;
 }
+
+@media (min-aspect-ratio: 9/7) {
+    .interval-form{
+        font-size: 1vw;
+    }
+}
+
 
 /*label {*/
 /*    !*width: 100%;*!*/
