--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -1,23 +1,7 @@
 label, input {
-    /* align-content: center;*/
-    /*justify-content: center;*/
-    /* text-align: center;*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    /*width: auto;*/
+    display: grid;
     justify-items: center;
-    justify-content: center;
-    margin-bottom: 0;
-    /*margin-left: .5em;*/
-    /*margin-right: .5em;*/
-    /*padding-top: .2em;*/
-    /*padding-bottom: .2em;*/
-    margin-left: 2vw;
-    margin-right: 2vw;
-    padding-top: 1vw;
-    padding-bottom: 1vw;
+    align-items: center;
 }
 
 input[type='number']::-webkit-inner-spin-button,
@@ -29,9 +13,9 @@ input[type='number']::-webkit-outer-spin-button {
 .bottom-grid-controller {
     grid-area: bottombtn;
     display: grid;
+    align-items: center;
     grid-template-columns: 15vw 15vw 15vw 15vw 15vw;
-    font-family: "CaskaydiaCove Nerd Font", serif;
-    font-size: 4vw;
+    font-size: 3vw;
     text-align: center;
     height: 10vw;
     /*transition: background 0.2s;*/
@@ -40,33 +24,59 @@ input[type='number']::-webkit-outer-spin-button {
 
 @media (min-aspect-ratio: 9/7) {
     .bottom-grid-controller {
-        grid-template-columns: 11vw 11vw 6vw 11vw 11vw;
+        height: 5vw;
+        grid-template-columns: 10vw 10vw 5vw 10vw 10vw;
     }
 }
 
 .side-grid-controller {
-    /*background: #d52828;*/
     grid-area: sidebtn;
-    display: flex;
-    flex-direction: column;
-    font-family: "CaskaydiaCove Nerd Font", serif;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    grid-template-rows: 15vw 15vw 15vw 15vw 15vw;;
     font-size: 3vw;
-    border: 0;
     text-align: center;
-    transition: background 0.2s;
+    /*transition: background 0.2s;*/
     width: 10vw;
 }
 
 @media (min-aspect-ratio: 9/7) {
     .side-grid-controller {
         width: 5vw;
+        grid-template-rows: 10vw 10vw 5vw 10vw 10vw;
     }
 }
 
 .control-button {
     background: #D42990;
-    width: 100%;
-    height: 100%;
+    font-size: 3vw;
+}
+
+@media (min-aspect-ratio: 9/7) {
+    .control-button {
+        font-size: 1.5vw;
+    }
+}
+
+.control-button--bottom {
+    height: 10vw;
+}
+
+@media (min-aspect-ratio: 9/7) {
+    .control-button--bottom {
+        height: 5vw;
+    }
+}
+
+.control-button--side {
+    width: 10vw;
+}
+
+@media (min-aspect-ratio: 9/7) {
+    .control-button--side {
+        width: 5vw;
+    }
 }
 
 .column-form {
@@ -83,33 +93,20 @@ input[type='number']::-webkit-outer-spin-button {
     margin-bottom: 0;
 }
 
+.col-affected-quantity,
 .row-affected-quantity {
-    /*display: grid;*/
-    /*align-self: center;*/
-    /*justify-self: center;*/
-    /*padding: 0 1em 0;*/
     font-size: 2vw;
-    /*background: #ff4f1e;*/
 }
 
-/*.row-affected-quantity input {*/
-/*    height: 10vw;*/
-/*}*/
-
-.col-affected-quantity {
-    /*display: grid;*/
-    /*align-self: center;*/
-    /*justify-self: center;*/
-    font-size: 2vw;
-    /*padding: 0 1em 0;*/
-    /*background: #ff4f1e;*/
+@media (min-aspect-ratio: 9/7) {
+    .col-affected-quantity,
+    .row-affected-quantity {
+        font-size: 1.3vw;
+    }
 }
 
 .row-affected-quantity input,
 .col-affected-quantity input {
-    /*display: grid;*/
-    /*align-self: center;*/
-    /*justify-self: center;*/
     width: 10vw;
 }
 
