Improve overall layout for mobile and desktop views.

--- a/src/styles/pattern.css
+++ b/src/styles/pattern.css
@@ -10,7 +10,7 @@
 .fresh-grid-size {
     display: grid;
     font-size: 2vw;
-    padding: 0 1vw 0;
+    /*padding: 0 1vw 0;*/
     /*background: #ff4f1e;*/
 }
 
@@ -18,7 +18,7 @@
 
 .pattern-container {
     grid-area: pattern;
-    padding: 1vw 0;
+    /*padding: 1vw 0;*/
     background: #7387c4;
 }
 
