--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,8 +47,8 @@ body {
 
 @media (min-aspect-ratio: 9/7) {
     .layout {
-        padding-left: 3vw;
-        padding-right: 3vw;
+        padding-left: 8vw;
+        padding-right: 8vw;
     }
 }
 
@@ -63,7 +63,6 @@ nav {
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr;
-    margin: 40px auto;
 }
 
 .links {
@@ -79,7 +78,7 @@ nav {
 
 @media (min-aspect-ratio: 9/7) {
     .links {
-        font-size: 1.7vw;
+        font-size: 1.3vw;
     }
 }
 
@@ -88,6 +87,8 @@ nav {
     font-size: 5vw;
     justify-self: left;
     align-self: center;
+    margin-top: 1vw;
+    margin-bottom: 0;
 }
 
 @media (min-aspect-ratio: 9/7) {
@@ -127,7 +128,9 @@ footer p {
 
 canvas {
     display: flex;
-    width: 45vw;
+    align-items: center;
+    justify-items: center;
+    width: 33vw;
     object-fit: contain;
 }
 
@@ -155,7 +158,7 @@ label {
 
 @media (min-aspect-ratio: 9/7) {
     label{
-        font-size: 1.1vw;
+        font-size: 0.9vw;
     }
 }
 
@@ -173,8 +176,8 @@ input, textarea {
 
 @media (min-aspect-ratio: 9/7) {
     input, textarea {
-        padding: .5vw;
-        font-size: 1.2vw;
+        padding: .3vw;
+        font-size: 1.1vw;
     }
 }
 
