--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -210,6 +210,7 @@ input[type="text"]:disabled {
 
 @media (min-aspect-ratio: 9/7) {
     .btn {
+        margin-top: 2vw;
         padding: 1vw 2vw;
         font-size: 2vw;
         width: 16vw;
