--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -140,11 +140,6 @@ canvas {
     }
 }
 
-.form--centered {
-    margin: 0 auto;
-    padding: 0 1vw;
-}
-
 form {
     margin-bottom: 1vw;
 }
@@ -157,7 +152,7 @@ label {
 }
 
 @media (min-aspect-ratio: 9/7) {
-    label{
+    label {
         font-size: 0.9vw;
     }
 }
@@ -168,7 +163,7 @@ input, textarea {
     align-items: center;
     color: white;
     width: 100%;
-    border-radius: 1vw;
+    border-radius: 3vw;
     border: 1px solid #8c789b;
     padding: 1vw;
     font-size: 3vw;
@@ -178,6 +173,7 @@ input, textarea {
     input, textarea {
         padding: .3vw;
         font-size: 1.1vw;
+        border-radius: 1vw;
     }
 }
 
@@ -197,22 +193,49 @@ input[type="text"]:disabled {
     background: #D42990;
     white-space: nowrap;
     font-size: 3vw;
-    width: 24vw;
+    width: 28vw;
     padding: 2vw 4vw;
     border: 0;
     /*margin: 0 0 1vw 0;*/
     display: block;
     text-align: center;
-    border-radius: .5rem;
+    border-radius: 3vw;
     font-weight: bold;
     transition: background 0.2s;
+    margin-top: 3vw;
 }
 
 @media (min-aspect-ratio: 9/7) {
     .btn {
         margin-top: 2vw;
         padding: 1vw 2vw;
-        font-size: 2vw;
+        font-size: 1.5vw;
         width: 16vw;
+        border-radius: 1.5vw;
     }
+}
+
+.form--centered {
+    margin: 10vw auto;
+    border: 1px solid rgb(145, 42, 224);
+    padding: 5vw;
+    width: 70vw;
+    border-radius: 3vw;
+    background: rgb(145, 42, 224);
+    background: radial-gradient(circle, rgba(145, 42, 224, 1) 0%, rgba(91, 25, 210, 1) 100%);
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),
+    0 0 0 1px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+
+@media (min-aspect-ratio: 9/7) {
+    .form--centered {
+        width: 30vw;
+        border-radius: 3vw;
+        padding: 3vw;
+    }
+}
+
+.form--centered h1 {
+    margin-top: 0;
 }
