Adjust layout of pattern controls.

--- a/src/styles/grid.module.css
+++ b/src/styles/grid.module.css
@@ -7,20 +7,34 @@
 }
 
 .coordinatesBtn {
-    background: #32d429;
+    background-color: #EA4C89;
     height: 8vw;
     font-size: 3vw;
     padding: 1vw 1.5vw;
     border-radius: 1vw;
     /*margin-top: 20px;*/
+    transition: color 100ms;
     font-weight: 500;
+    border-style: none;
+    cursor: pointer;
+    outline: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+
 }
 
 @media (min-aspect-ratio: 9/7) {
     .coordinatesBtn {
-        height: 3vw;
+        height: 2.2vw;
         font-size: 1vw;
-        padding: .3vw .3vw;
-        border-radius: .5vw;
+        padding: .3vw .5vw;
+        border-radius: 1vw;
     }
 }
+
+/*.coordinatesBtn:focus,*/
+.coordinatesBtn:hover {
+    background-color: #F082AC;
+}
+
