--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -163,12 +163,12 @@ input[type="text"]:disabled {
     /*border: 1px solid rgb(145, 42, 224);*/
     padding: 5vw;
     width: 70vw;
-    border-radius: 3vw;
-    background: rgb(145, 42, 224);
-    background: radial-gradient(circle, rgba(145, 42, 224, 1) 0%, rgba(91, 25, 210, 1) 100%);
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),
-    0 0 0 1px rgb(255, 255, 255),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    /*border-radius: 3vw;*/
+    /*background: rgb(145, 42, 224);*/
+    /*background: radial-gradient(circle, rgba(145, 42, 224, 1) 0%, rgba(91, 25, 210, 1) 100%);*/
+    /*box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),*/
+    /*0 0 0 1px rgb(255, 255, 255),*/
+    /*0.3em 0.3em 1em rgba(0, 0, 0, 0.3);*/
 }
 
 @media (min-aspect-ratio: 9/7) {
@@ -181,4 +181,13 @@ input[type="text"]:disabled {
 
 .form--centered h1 {
     margin-top: 0;
+}
+
+.gradient-background-with-shadow {
+    border-radius: 3vw;
+    background: rgb(145, 42, 224);
+    background: radial-gradient(circle, rgba(145, 42, 224, 1) 0%, rgba(91, 25, 210, 1) 100%);
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),
+    0 0 0 1px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
