Change patterns-control-container styles to css module (and rename to patterns-control).

--- a/src/styles/patterns-control.module.css
+++ b/src/styles/patterns-control.module.css
@@ -8,7 +8,7 @@
     align-items: end;
 }
 
-.fresh-grid-size {
+.fresh-grid-size-input {
     display: grid;
     font-size: 2vw;
     padding-top: .5vw;
