--- a/src/styles/generic-user-form.module.css
+++ b/src/styles/generic-user-form.module.css
@@ -22,3 +22,13 @@
 .generic-form h1 {
     margin-top: 0;
 }
+
+.generic-form-button {
+    margin-top: 2.5vw;
+}
+
+@media (min-aspect-ratio: 9/7) {
+    .generic-form-button {
+        margin-top: 1vw;
+    }
+}
