Adjust grid play control style.

--- a/src/styles/play.module.css
+++ b/src/styles/play.module.css
@@ -1,14 +1,16 @@
 .play-container {
     grid-area: play;
     display: grid;
-    grid-template-columns: 15vw 15vw 15vw 15vw 15vw;
-    background: #8ad429;
+    grid-template-columns: 14vw 14vw 14vw 14vw 14vw;
+    grid-gap: 1.25vw;
+    /*background: #8ad429;*/
     font-size: 2.8vw;
 }
 
 @media (min-aspect-ratio: 9/7) {
     .play-container {
-        grid-template-columns: 6.8vw 6.8vw 5.8vw 6.8vw 6.8vw;
+        grid-template-columns: 6.5vw 6.5vw 5.5vw 6.5vw 6.5vw;
+        grid-gap: .4vw;
         font-size: 2vw;
     }
 }
@@ -22,7 +24,20 @@
 }
 
 @media (min-aspect-ratio: 9/7) {
-    .interval-form{
+    .interval-form {
         font-size: 1vw;
+    }
+}
+
+.play-grid-button {
+    height: auto;
+    white-space: normal;
+    font-size: 2.3vw;
+    padding: 0 2vw;
+}
+
+@media (min-aspect-ratio: 9/7) {
+    .play-grid-button {
+        font-size: .8vw;
     }
 }
